Fix resume: prevent linebreaks in <tr>'s on mobile down to 375x667

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -124,7 +124,7 @@ a.nobot.jeff-ph-num:after {
 }
 
 .resume-layout td {
-  @apply pr-3; /* spacing between colummns of table */
+  @apply pr-1; /* spacing between colummns of table */
 }
 
 .resume-layout br.responsive {
